Fix users segmented cascade on mobile

--- a/frontend/src/styles/pages/_users.scss
+++ b/frontend/src/styles/pages/_users.scss
@@ -245,8 +245,10 @@
   max-width: 100%;
 }
 
-.users-segmented button {
+.users-page .users-segmented button,
+.players-tab .users-segmented button {
   min-width: 0;
+  flex: 1 1 0;
 }
 
 .users-subhead {
